--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .container {
-    height: 100%;
-    width: 100%;
+    height: 50%;
+    width: 50%;
     position: relative;
 }
 
@@ -104,4 +104,11 @@
     top: 70px;
     background: #D9D9D9;
     border-radius: 50%;
+}
+
+@media (max-width: 500px) {
+    .circle {
+        left: 10px;
+        top: 150px;
+    }
 }
